# TABFAIRGDT

./: .gitignore  LICENSE  README.md  main.py  ood_experiment.ipynb  requirements.txt  run_experiment.py
scikit-learn-main/: CONTRIBUTING.md  COPYING  MANIFEST.in  Makefile  README.rst  SECURITY.md  meson.build  pyproject.toml  setup.cfg  setup.py
scikit-learn-main/custom_sklearn/: __init__.py  _config.py  _distributor_init.py  _min_dependencies.py  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  exceptions.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  meson.build  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py
scikit-learn-main/custom_sklearn/__check_build/: __init__.py  meson.build
scikit-learn-main/custom_sklearn/_build_utils/: __init__.py  openmp_helpers.py  pre_build_helpers.py  version.py
scikit-learn-main/custom_sklearn/_loss/: __init__.py  _loss.pyx.tp  meson.build
scikit-learn-main/custom_sklearn/cluster/: _affinity_propagation.py  _agglomerative.py  _bicluster.py  _birch.py  _bisect_k_means.py  _dbscan.py  _hierarchical_fast.pyx  _kmeans.py  _mean_shift.py  _optics.py  _spectral.py  meson.build
scikit-learn-main/custom_sklearn/compose/: __init__.py  _column_transformer.py  _target.py
scikit-learn-main/custom_sklearn/covariance/: _elliptic_envelope.py  _empirical_covariance.py  _graph_lasso.py  _robust_covariance.py  _shrunk_covariance.py
scikit-learn-main/custom_sklearn/cross_decomposition/: _pls.py
scikit-learn-main/custom_sklearn/datasets/: __init__.py  _base.py  _california_housing.py  _covtype.py  _kddcup99.py  _lfw.py  _olivetti_faces.py  _openml.py  _rcv1.py  _samples_generator.py  _species_distributions.py  _svmlight_format_io.py  _twenty_newsgroups.py  meson.build
scikit-learn-main/custom_sklearn/decomposition/: _dict_learning.py  _factor_analysis.py  _fastica.py  _incremental_pca.py  _kernel_pca.py  _lda.py  _nmf.py  _pca.py  _sparse_pca.py  _truncated_svd.py  meson.build
scikit-learn-main/custom_sklearn/ensemble/: _bagging.py  _base.py  (+8 more)
scikit-learn-main/doc/: Makefile  README.md  about.rst  api_reference.py  common_pitfalls.rst  computing.rst  conf.py  conftest.py  data_transforms.rst  datasets.rst  faq.rst  getting_started.rst  glossary.rst  governance.rst  index.rst.template  inspection.rst  install.rst  make.bat  metadata_routing.rst  model_persistence.rst  presentations.rst  related_projects.rst  roadmap.rst  support.rst  visualizations.rst  whats_new.rst
scikit-learn-main/examples/: README.txt
(+953 files in other folders)
