[options]
packages = find:

[options.packages.find]
include = custom_sklearn*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = custom_sklearn
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    # Activate the plugin explicitly to ensure that the seed is reported
    # correctly on the CI when running `pytest --pyargs custom_sklearn` from the
    # source folder.
    -p custom_sklearn.tests.random_seed

[mypy]
ignore_missing_imports = True
allow_redefinition = True
exclude=
    custom_sklearn/externals

[mypy-joblib.*]
follow_imports = skip

[check-manifest]
# ignore files missing in VCS
ignore =
    custom_sklearn/_loss/_loss.pyx
    custom_sklearn/linear_model/_sag_fast.pyx
    custom_sklearn/linear_model/_sgd_fast.pyx
    custom_sklearn/utils/_seq_dataset.pyx
    custom_sklearn/utils/_seq_dataset.pxd
    custom_sklearn/utils/_weight_vector.pyx
    custom_sklearn/utils/_weight_vector.pxd
    custom_sklearn/metrics/_dist_metrics.pyx
    custom_sklearn/metrics/_dist_metrics.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_argkmin.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_argkmin.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_argkmin_classmode.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_base.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_base.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
    custom_sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx
    custom_sklearn/metrics/_pairwise_distances_reduction/_radius_neighbors_classmode.pyx
    custom_sklearn/neighbors/_ball_tree.pyx
    custom_sklearn/neighbors/_binary_tree.pxi
    custom_sklearn/neighbors/_kd_tree.pyx


[codespell]
skip = ./.git,./.mypy_cache,./custom_sklearn/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt
